--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,4 +1,5 @@
 @import url("header.css");
+@import url("burgerStyle.css");
 
 
 
@@ -6,7 +7,7 @@
 /*Variables de colores*/
 
 :root{
-    --
+    
     --orange: #FD7C43;
     --black: #000000;
     --white: #FFFFFF;
