--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -7,7 +7,7 @@
     justify-content: space-around;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 999;
+    font-weight: bolder;
     
 }
 .llamenos span{
