--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -7,7 +7,6 @@
 /*Variables de colores*/
 
 :root{
-    
     --orange: #FD7C43;
     --black: #000000;
     --white: #FFFFFF;
@@ -23,4 +22,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+ul{
+    list-style: none;
 }
