--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -20,25 +20,7 @@
 .welcome .h1s{
     margin-top: 120px;
 }
-.welcome h1.noPadding{  
-    width: 100%;
-    height: 20%;
-    font-size: 100%;
-    font-family: 'Montserrat', sans-serif;
-    -webkit-text-stroke: 0.3px rgb(255, 255, 255);
-     color: transparent; 
-     margin: 0 auto;        
-}
-.welcome .paddingH1 {
 
-    width: 100%;
-    
-    font-size: 1.9rem;
-    font-family: 'Montserrat', sans-serif;
-    
-     color: white; 
-     margin: 0 auto;
-}
 .welcome .btn-presupuesto a{
     padding-top: 15px;
     padding-bottom: 15px;
@@ -54,11 +36,33 @@
    
     
 }
-
 .btn-presupuesto{
     position: absolute;
     width: 100%;
     bottom: 15%;
     z-index: 800;
+   
+}
+@media screen and (min-width: 768px){
+    .welcome .textos {
+        padding-top: 20%;
+
+        
+    }
+    .welcome .textos img{
+        width: 100%;
+        height: px;
+    }
+    .welcome .h1b :nth-child(2){
+        display: none;
+    }
+    .welcome .btn-presupuesto a{
+      font-size: 40px;
+      margin-left: 40%;
+      border: 1px solid white;
+    }
+    .btn-presupuesto{   
+        bottom: 10%;
+    }
    
 }
