comente linea 110 del header.css porque tiraba un error al estar vacia

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -107,10 +107,10 @@ text-align: center;
     .ulHeader {
      display: flex;
     }
-    .ulHeader ul{
+    /* .ulHeader ul{
 
    
-    }
+    } */
     .ulHeader li{
         margin-left: 5px;
         padding: 20px;
