--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -1,6 +1,7 @@
 .contactTitleOnMobile {
-    text-align: center;
     font-size: 20px;
+    margin-left: 10%;
+    margin-top: 30px;
 }
 
 .contactForm form{
@@ -43,7 +44,9 @@
     border-radius: 30px;
     padding: 15px;
     border: none;
+    width: 150px;
     box-shadow: 0px 2px var(--grey) ;
+    margin-top: 10px;
 }
 
 .asideContact {
