--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -27,7 +27,6 @@
     padding-left: 40px;
     padding-right: 40px;
     background-color:var(--orange);
-    
     margin:0 auto;
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
@@ -57,8 +56,6 @@
 @media screen and (min-width: 768px){
     .welcome .textos {
         padding-top: 20%;
-
-        
     }
     .welcome .textos img{
         width: 100%;
@@ -68,13 +65,26 @@
         display: none;
     }
     .welcome .btn-presupuesto a{
-      
-      margin-left: 40%;
       border: 1px solid white;
     }
     .btn-presupuesto{   
-        bottom: 10%;
+    bottom: 10%;
+    margin-left: 30%;
+    margin-bottom: 20px;
     }
    
+   
+}
+
+@media screen and (min-width: 1024px){
+    .welcome .btn-presupuesto a{
+    padding: 20px 50px;
+    font-size: 18px;
+      }
+    
+    .btn-presupuesto{
+        margin-left: 30%;
+    margin-bottom: 15px;
+      }
    
 }
