--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -14,6 +14,10 @@ header{
     font-weight: bolder;
     position: relative;
     z-index: 3;
+    position: fixed;
+    width: 100vw;
+    margin-top: -5px;
+    
 }
 .llamenos span{
 
@@ -27,6 +31,7 @@ header{
 }
 /*sector que tiene solo logo en mobile, lo centro*/
 .navLogo{
+padding-top: 80px;
 align-items: center;
 text-align: center;
 }
@@ -92,9 +97,11 @@ text-align: center;
        border-bottom: 4px solid var(--black);
    }
    .llamenos{
+    width: 100vw;
        height: 3rem;
    }
     .navLogo{
+        padding-top: 40px;
         margin-top: 5px;
         justify-content: space-around;
         display: flex;
