--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -50,7 +50,7 @@ text-align: center;
     width: 221px;
     height: 396px;
     background-color: var(--black);
-    position: absolute;
+    position: fixed;
     color: white;
     right: 10px;
     z-index: 2;
@@ -60,7 +60,7 @@ text-align: center;
     top: -500px;
 }
 .deploy{
-    top:80px;
+    top:70px;
 }
 .menuMobile nav{
     margin: 10%;
