--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -32,14 +32,12 @@
     font-size: 12px;
     border-radius: 10px;
     color: white;
-   
-    
 }
+
 .btn-presupuesto{
     position: absolute;
     bottom: 15%;
     z-index: 1;
-   
 }
 
 .outline-top {
@@ -49,7 +47,18 @@
 
 .outline-bottom {
     opacity: 30%;
-    
+}
+
+.brands-title{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    color: white;
+    margin-bottom: 5px;
+    margin-top: 0;
+    background-color: black;
+    text-align: center;
+    padding: 3px 0;
 }
 
 @media screen and (min-width: 768px){
@@ -71,6 +80,10 @@
     margin-left: 30%;
     margin-bottom: 20px;
     }
+
+    .brands-title{
+        font-size: 15px;
+    }
    
    
 }
@@ -86,4 +99,7 @@
     margin-bottom: 15px;
       }
    
+      .brands-title{
+        font-size: 25px;
+    }
 }
