fin de contacto

--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -59,19 +59,10 @@
 .contactDesktopImg {
     display: none;
 }
-/* .backContact {
-    z-index: 0;
-    -webkit-text-stroke: 1px var(--orange);
-    color: transparent;
-    font-size: 17vw;
-    text-align: center;
+.finishOfContact {
+    width: 100%;
 }
-.frontContact {
-    z-index: -1;
-    text-align: center;
-    font-size: 10vw;
-    transform: translateY(95px);
-} */
+
 @media (min-width: 768px){
     .contactImg {
         display: none;
@@ -105,6 +96,10 @@
     #contactSignature {
         margin-left: 40%;
     }
+    .finishOfContact {
+        display: none;
+    }
+    
     .btnFormSubmit{
         color: var(--orange);
         background-color: var(--black);
