--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -62,7 +62,9 @@
 .finishOfContact {
     width: 100%;
 }
-
+.frontContact {
+    display: none;
+}
 @media (min-width: 768px){
     .contactImg {
         display: none;
@@ -99,7 +101,14 @@
     .finishOfContact {
         display: none;
     }
-    
+    .frontContact {
+        display: block;
+        font-size: 16.5vw;
+        text-align: center;
+        color: var(--orange);
+        -webkit-text-stroke: 1px #00000050;
+        text-shadow: var(--orange) -7px -7px; 
+    }
     .btnFormSubmit{
         color: var(--orange);
         background-color: var(--black);
