--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4,7 +4,7 @@
 @import url('contact.css');
 @import url('footer.css');
 @import url('carousel.css');
-
+@import url('address.css');
 
 
 /*Variables de colores*/
