--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -1,91 +1,126 @@
-.service{
+section.service{
     align-items: center;
     text-align: center;
 }
-.titu-service{
-    
+.hrDesktop{
+    display: none;
+}
+.imgDesktop{
+    display: none;
+}
+.servicios{
     display: flex;
     justify-content: center;
-    padding: 20px;
-    border-bottom: 5px solid black;
-}
-h4.h-service{
-    border: 1px solid black;
-    width: fit-content ;
-}
-article.box-experience{
-    padding: 40px;
-}
-
-article.box-experience img{
-    width: 65px;
     margin-bottom: 10px;
 }
-article#orange{
-    
+.titulo-service{
+    border: 1px black solid;
+    width: fit-content;
+}
+.boxes-informacion{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+img.imgBox{
+    margin-bottom: 10px;
+}
+hr.hrBox{
+    width: 20px;
+     margin: 0 auto;
+    border-color: black;
+}
+.boxInfo{
+    align-items: center;
+    text-align: center;
     background-color: var(--orange);
+    padding: 18px;
+    margin-bottom: 5px;
 }
-
-hr.hr-box{
-    width: 15px;
-    margin: 0 auto;
-    color: black;
+.titleBox{
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
-h5.text-service{
-    margin: 10px 0 10px 0;
+#greyBox{
+    background-color: var(--white);
 }
- img#cocina-img{
-     margin-top: 20px;
-    width: 100%;
-}
-p.sub-text-service{
-    font: 800;
-}
-article.estamos{
+.estamosText{
     text-align: left;
-padding: 25px 55px 25px 55px;
-
 }
-p.p-estamos{
-    line-height: 35px;
-    font-size: 20px;
-}
-strong{
-    font-weight: 600;
+.estamos{
+    padding: 45px;
+    line-height: 29px;
 }
 
 @media screen and (min-width: 768px){
-     section.service{
-         background-repeat: no-repeat;
-         background-size: cover;
-         background-image: url("/public/images/Frame\ 8.png");
-     }
-     .box-experience{
-         height: 185px;
-         width: 155%;
-     }
-  .titu-service{
-      display: none;
-  }
-  article.estamos{
-      margin-left: 15%;
-      padding-top: 20%;
-      padding-right: 25%;
-  }
-  /* p.p-estamos{
+    section.service{
+        background-color: var(--grey);
+        padding-left: 7%;
+    }
+    .titulo-service{
+        display: none;
+    }
+    .imgMobile{
+        display: none;
+    }
+    .grid-box{
+        display: flex;
 
-  } */
-     .service-desktop{
-         height: 555px;
-         display: flex;
-         background-color: var(--grey);
-         width: 80%;
-         padding-left: 4%;
-     }
-     img#cocina-img{
-         display: none;
-     }
-     /* article#orange{
+    }
+    .imgDesktop{
+        display: block;
+        width: 100%;
+        height:100%;
+    }
+    .stickyLogo{
         
-     } */
+        position: absolute;
+        display: flex;
+        background-color: black;
+        width: fit-content;
+        padding: 65px 15px 8px 15px;
+
+    }
+    .stickyLogo img{
+        width: 35px;
+    }
+    .estamos{
+        font-size: 28px;
+        line-height: 37px;
+        padding: 12
+    px
+    ;
+    }
+    .estamosText{
+       width: 45%;
+       font-size: 57px;
+       line-height: 0;
+       display: flex;
+       justify-content: center;
+       flex-direction: column;
+       align-items: center;
+    }
+    .imagenLogo{
+        position: relative;
+        background-image: url(/public/images/bordeimg.png);
+        background-position: center;
+        background-size: cover;
+        width: 20%;
+        margin-top: -10px;
+    }
+    .boxInfo{
+        max-width: 545px;
+        margin-top: -8px;
+    }
+    .hrDesktop{
+        display: flex;
+        justify-content: flex-end;
+       margin-top: 67px;
+        border-color: var(--black);
+        
+    }
+  #animation.animation{
+      margin-top: -10px;
+  }
 }
+@media screen and (min-width: 1020px){
