--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -93,7 +93,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
-        gap: 40px;
+        gap: 30px;
     }
     #contactSignature {
         margin-left: 40%;
@@ -129,22 +129,28 @@
        height: 50px;
     }
     .sideServitronic{
-        -webkit-text-stroke: 1px var(--black);
+        -webkit-text-stroke: 1px rgba(0, 0,0, 3);
         transform: rotate(270deg);
         color: transparent;
         font-size: 60px;
         position: relative;
-        left: 70%;
-        bottom: 190px;
+        left: 64%;
+        bottom: 295px;
         display: none;
+        
     }
     .contactLogo{
         margin-right: 80%;
         margin-top: 20px;
     }
-    @media (min-width: 1920px){
-        .sideServitronic{
-            display: block;
-        }
+    .hrContact{
+        width: 70%;
+        background-color: var(--black);
+        height: 3px;
+    }
+}
+@media (min-width: 1440px){
+    .sideServitronic{
+        display: block;
     }
 }
