--- a/site/public/stylesheets/styles.css
+++ b/site/public/stylesheets/styles.css
@@ -29,6 +29,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    scroll-behavior: smooth;
 }
 ul{
     list-style: none;
