agregando imagen de servitronic el h2 se rompe, modificar lops demas

--- a/site/public/stylesheets/welcome.css
+++ b/site/public/stylesheets/welcome.css
@@ -99,7 +99,7 @@
    
 }
 
-@media screen and (min-width: 1280px){
+/* @media screen and (min-width: 1280px){
     .welcome .btn-presupuesto a{
         border: 1px solid white;
         padding: 25px 80px;
@@ -127,4 +127,4 @@
         margin: 43% 0% 0% 68%;
     }
    
-}
+} */
