--- a/site/public/stylesheets/burgerStyle.css
+++ b/site/public/stylesheets/burgerStyle.css
@@ -11,7 +11,8 @@ text-transform: none;
 background-color: --var(white);
 border: 0;
 margin: 0;
-overflow: visible; }
+overflow: visible; 
+}
 .hamburger:hover {
     opacity: 0.7; }
 .hamburger.is-active:hover {
