--- a/site/public/stylesheets/service.css
+++ b/site/public/stylesheets/service.css
@@ -89,7 +89,7 @@ hr.hrBox{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         line-height: 3rem;
         padding: 12px;
         z-index: 1;
@@ -97,6 +97,7 @@ hr.hrBox{
         text-align: left;
         text-shadow: 1px 10px 1px #B8B8B8;
         letter-spacing: 2px;
+        margin: 0 auto;
         
     }
     .estamosText{
