--- a/site/public/stylesheets/service.css
+++ b/site/public/stylesheets/service.css
@@ -48,8 +48,15 @@ hr.hrBox{
 }
 .estamos{
     padding: 45px;
-    line-height: 29px;
+    line-height: 36px;
+    font-size: 28px;
 }
+span.textoNegrita{
+    display: inline-block;
+    margin-left: 0;
+    font-weight: bold;
+}
+
 
 @media screen and (min-width: 768px){
     section.service{
