--- a/site/public/stylesheets/address.css
+++ b/site/public/stylesheets/address.css
@@ -9,13 +9,13 @@
     display: none;
 }
 
-.address-asside{
+/* .address-asside{
     -webkit-text-stroke: 1px var(--black);    
     color: transparent;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     text-align: center;
     z-index: 1;
-}
+} */
 
 .address-title{
     text-transform: uppercase;
@@ -30,7 +30,15 @@
 
 }
 .address-img{
-    width:100%
+    width:100%;
+}
+.DesktopContactBg{
+    display: none;
+}
+.address-servitronic{
+    width: 100%;
+    padding:0px 10px
+
 }
 
 @media screen and (min-width: 1280px){
@@ -41,7 +49,14 @@
         display:none
     }
     .btn-adress{
-        display:flex
+    display: flex;
+    width: 40%;
+    transform: translate(150%,-100%);
+    height: 70
+px
+;
+    align-items: center;
+    align-content: center
     }
    .address-font{
         background-color:#C4C4C4
@@ -49,5 +64,22 @@
     .address-section{
         background-color: white;
     }
-   
+
+    .address-servitronic{
+        display:none
+    }
+   .DesktopContactBg{
+       display:flex;
+       background-color: #C4C4C4;      
+   }
+   #btn-uber{
+    text-align: center
+}
+.map-google{
+    height:30rem
+}
+#map-desk{
+    height:90%;
+    padding:30px
+}
 }
