--- a/site/public/stylesheets/address.css
+++ b/site/public/stylesheets/address.css
@@ -52,9 +52,7 @@
     display: flex;
     width: 40%;
     transform: translate(150%,-100%);
-    height: 70
-px
-;
+    height: 70px;
     align-items: center;
     align-content: center
     }
