--- a/site/public/stylesheets/gridBrands.css
+++ b/site/public/stylesheets/gridBrands.css
@@ -1,3 +1,7 @@
+
+brandsTitle{
+    background-image: url();
+}
 .cajaConFoto{
     display:flex;
    flex-direction: column;
@@ -9,9 +13,15 @@ width: 150px;
 .SmegFirst{
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 15px;
 }
 .textoMarca{
     font-size: 14px;
     max-width: 150px;
     line-height: 19px;
+    margin-top: 5px;
+}
+.tituloDeMarcas{
+    font-weight: bolder;
+    margin: 3px 0 3px;
 }
