marcas para hosting

--- a/site/public/stylesheets/gridBrands.css
+++ b/site/public/stylesheets/gridBrands.css
@@ -1,6 +1,6 @@
 
 .brandsTitle{
-    background-image: url(/site/public/images/MARCAS.png);
+    background-image: url(../images/MARCAS.png);
     background-repeat: no-repeat;
     background-size: cover;
     border-bottom: 5px solid black;
