--- a/site/public/stylesheets/gridBrands.css
+++ b/site/public/stylesheets/gridBrands.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-bottom: 5px solid black;
-    padding: 35px;
+    padding: 50px 0 20px;
     margin-bottom: 22px;
 }
 .marcasPrincipalTitulo{
