--- a/site/public/stylesheets/service.css
+++ b/site/public/stylesheets/service.css
@@ -64,6 +64,7 @@ hr.hrBox{
         background-color: var(--grey);
         padding-left: 7%;
         margin-top: 0;
+        margin-bottom: -2px;
     }
     .titulo-service{
         display: none;
