--- a/site/public/stylesheets/welcome.css
+++ b/site/public/stylesheets/welcome.css
@@ -72,6 +72,23 @@
 
 
 @media screen and (min-width: 768px){
+    .logoWsp {
+        display: block;
+    position: fixed;
+    right: -10px;
+    bottom: 140px;
+    width: 100px;
+    height: 50px;
+    z-index: 99999;
+    text-align: center;
+    color: var(--colorSecundaryWhite);
+    font-weight: bold;
+    
+    }
+
+    .imgWsp {
+        width: 60%;
+    }
     .welcome .textos {
         padding-top: 20%;
     }
