--- a/site/public/stylesheets/welcome.css
+++ b/site/public/stylesheets/welcome.css
@@ -76,6 +76,10 @@
 
 
 @media screen and (min-width: 768px){
+    .boton-wsp{
+        display:block;
+    }
+    
     .logoWsp {
         display: block;
     position: fixed;
