--- a/site/public/stylesheets/service.css
+++ b/site/public/stylesheets/service.css
@@ -157,7 +157,7 @@ hr.hrBox{
     margin: 0;
     padding: 18px;
 }
-marquee{
+marquee{ /* QUE PASOOO MACAAA??? */
 color: var(--orange);
 font-size: 1.5rem;
 height: 10%;
