--- a/site/public/stylesheets/gridBrands.css
+++ b/site/public/stylesheets/gridBrands.css
@@ -27,7 +27,10 @@
 .flex{
     display: flex;
     color: var(--orange);
-    font-size: 33px;
+    font-size: 45px;
+}
+.flex span{
+    text-align: center;
 }
 /* .importantBrands article small{
     font-size: 24px;} */
@@ -93,6 +96,7 @@ margin-top: 55px;
     font-weight: bolder;
     margin: 3px 0 3px;
 }
+
 
 @media (min-width: 768px){
     .brandsTitleDesktop{
