Arreglando etiqueta figure

--- a/site/public/stylesheets/gridBrands.css
+++ b/site/public/stylesheets/gridBrands.css
@@ -157,7 +157,7 @@ margin-top: 55px;
         margin-top: 55px;
         margin-bottom: 55px;
     }
-    figure{
+    .gridBrands figure{
         padding-top:35px ;
         height: 280px;
     }
