cambios en el footer

--- a/site/public/stylesheets/footer.css
+++ b/site/public/stylesheets/footer.css
@@ -1,6 +1,7 @@
 footer{
     background-color: black;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     position: relative;
     bottom: 0;
@@ -22,6 +23,7 @@ footer span {
         justify-content: space-around;
         font-family: 'Montserrat', sans-serif;
         font-weight: bolder;
+        flex-direction: column;
     }
     footer img {
         height: 30px;
@@ -31,6 +33,17 @@ footer span {
     }
     footer span a{
         color: white;
+    }
+    .footer-divs{
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        margin: 10px 0;
+        background-color: black;
+    }
+
+    #llamenos{
+        margin-top: 10px;
     }
     
  }
